<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_box" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/inc_search_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/task_btn"
            android:gravity="center"
            android:onClick="toAssignment" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/background_icon"
        android:src="@drawable/ic_worcester_police_2" />

    <ScrollView
        android:id="@+id/Inc_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title" >

        <LinearLayout
            style="android:scrollViewStyle"
            android:layout_width="match_parent"
            android:layout_height="676dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/inc_type"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/inc_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/inc_type"
                android:prompt="@string/inc_type_promt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_textview"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/fromdate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/fromdate"
                    android:layout_alignBottom="@+id/fromdate"
                    android:layout_toLeftOf="@+id/fromdate"
                    android:textColor="#ffffff"
                    android:text="@string/from_textview" />

                <ImageButton
                    android:id="@+id/reset_from_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"
                    android:layout_toRightOf="@+id/fromdate"
                    android:background="@drawable/clear"
                    android:onClick="cleardate" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/todate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/reset_to_btn"
                    android:layout_toLeftOf="@+id/todate"
                    android:text="@string/to_textview" 
                    android:textColor="#ffffff"/>

                <ImageButton
                    android:id="@+id/reset_to_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"
                    android:layout_toRightOf="@+id/todate"
                    android:background="@drawable/clear"
                    android:onClick="cleardate" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district_textview"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/district_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/disrict"
                android:prompt="@string/district_promt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streetname"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/street_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPersonName" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streetnum"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/street_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartment_no"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/apt_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_resource"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/info_resource_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/info_resource_type"
                android:prompt="@string/info_resource_type_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inc_status_textview"
                android:textSize="20sp"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/inc_resovled_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/inc_resolved_status"
                android:prompt="@string/inc_resolved_status_prompt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/report_type_select_spinner"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/inc_search_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/search_btn"
                    android:onClick="IncidentSearch" />

                <Button
                    android:id="@+id/inc_reset_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/reset_btn"
                    android:onClick="reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>